--- a/personal.css
+++ b/personal.css
@@ -1,6 +1,6 @@
 body{
     background: url(https://images.freeimages.com/images/large-previews/a3b/website-rays-background-pattern-1637863.png);
-  
+    font-family: sans-serif;
 }
 
 hr{
